manifests/deploy-admin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-admin-sample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: admin-deployment
    spec:
      containers:
      - name: microservice-admin
        image: microservice-admin:latest
#       env:
#       - name: EXTERNAL_IP_ADDR
#         valueFrom:
#           configMapKeyRef:
#             name: ipaddr-config
#             key: EXTERNAL_IP_ADDR
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: keystore
          mountPath: /etc/wlp/config/keystore
        - name: truststore
          mountPath: /etc/wlp/config/truststore
        - name: liberty-config
          mountPath: /config/configDropins
        readinessProbe:
          httpGet:
            path: /admin/nessProbe
            port: 9080
      volumes:
       - name: keystore
         secret:
           secretName: wlp-keystore
       - name: truststore
         secret:
           secretName: wlp-truststore
       - name: liberty-config
         configMap:
           name: liberty-config
           items:
             - key: keystore.xml
               path: defaults/keystore.xml
             - key: logging.xml
               path: defaults/logging.xml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: default
spec:
  ports:
    - port: 9080
  selector:
    name: admin-deployment
