manifests/deploy-ayoho.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-admin-sample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: admin-deployment
    spec:
      containers:
      - name: microservice-admin
        image: microservice-admin:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: keystore
          mountPath: /etc/wlp/config/keystore
        - name: truststore
          mountPath: /etc/wlp/config/truststore
        - name: liberty-config
          mountPath: /config/configDropins
      volumes:
       - name: keystore
         secret:
           secretName: wlp-keystore
       - name: truststore
         secret:
           secretName: wlp-truststore
       - name: liberty-config
         configMap:
           name: liberty-config
           items:
             - key: keystore.xml
               path: defaults/keystore.xml
             - key: logging.xml
               path: defaults/logging.xml
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: default
spec:
  ports:
    - port: 9080
  selector:
    name: admin-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service-nodeport
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 9443
      nodePort: 31015

  selector:
    name: admin-deployment
